# AmitehProper

./: .gitignore
Amiteh_Back1.2.1/: .env  .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  manage.py  postgress stvari  pyproject.toml  requirements.txt
Amiteh_Back1.2.1/breadcrumb/: apps.py  utils.py  views.py
Amiteh_Back1.2.1/cart/: urls.py  views.py
Amiteh_Back1.2.1/core/: urls.py  views.py
Amiteh_Back1.2.1/homepage/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Amiteh_Back1.2.1/homepage/migrations/: 0001_initial.py  0002_carouselslide_image.py  0003_alter_carouselslide_color.py  0004_remove_carouselslide_color_alter_carouselslide_image.py
Amiteh_Back1.2.1/izdelki/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Amiteh_Back1.2.1/izdelki/izdelki/: izdelek.html  product.html
Amiteh_Back1.2.1/nordichomes/: asgi.py  settings.py  urls.py  wsgi.py
Amiteh_Back1.2.1/order/: admin.py  models.py  urls.py  views.py
Amiteh_Back1.2.1/order/migrations/: 0001_initial.py
Amiteh_Back1.2.1/product/: admin.py  models.py  serializers.py  urls.py  views copy.py  views.py
Amiteh_Back1.2.1/product/migrations/: 0001_initial.py  0002_rename_additional_field_1_product_f_max_and_more.py  0003_discount_stockstatus_make_description2_make_naslov_and_more.py  0004_discount_ime_akcije_discount_velja_do.py  0005_alter_discount_ime_akcije_alter_discount_velja_do.py  0006_alter_discount_discount_alter_stockstatus_in_stock.py  0007_alter_discount_options_remove_product_f_max_and_more.py  0011_alter_product_thumbnail.py  (+6 more)
(+87 files in other folders)
